# mlops-week6

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml
docker_iris/: .Dockerfile.swp  Dockerfile  main.py  terminal_log.txt  week6-iris-service.yaml
fast_iris/: .main.py.swo  .main.py.swp
k8s/: deployment.yaml  service.yaml
mlruns/0/: meta.yaml
mlruns/306821797950804437/: meta.yaml
mlruns/306821797950804437/be7af4f600134baa9e88904c619e1bbc/: meta.yaml
mlruns/821189401821383662/: meta.yaml
mlruns/821189401821383662/01876b0145194288ac8833cabc058cdb/: meta.yaml
mlruns/821189401821383662/050382bce89140cd96215c72c61444c4/: meta.yaml
mlruns/821189401821383662/0643069ffe364e3799c905d1903d770b/: meta.yaml
mlruns/821189401821383662/0e71717c732d446c9840589b98d30fc2/: meta.yaml
mlruns/821189401821383662/12b9db31d1e54bd0a6dbcf8f3add98cb/: meta.yaml
mlruns/821189401821383662/49f3eb77d39a4a25bde818747e9e7ceb/: meta.yaml
mlruns/821189401821383662/50f5c96655a94616a451849b819a4ecb/: meta.yaml
mlruns/821189401821383662/52f666d4a9d842749ad44975686fe795/: meta.yaml
mlruns/821189401821383662/6228093a3e8245e29919e3ca288e26ef/: meta.yaml
mlruns/821189401821383662/63f9cf8bf53b4589807e7a2b41b15584/: meta.yaml
mlruns/821189401821383662/6ef15e75c3e14460a621cebc756d07ea/: meta.yaml
mlruns/821189401821383662/720e171f2d264389aae1995696678348/: meta.yaml
mlruns/821189401821383662/8311fcfa8a00446a83692b961704d30f/: meta.yaml
mlruns/821189401821383662/908688f95d66420093b2a67e57d56b46/: meta.yaml
mlruns/990810875015209673/: meta.yaml
(+696 files in other folders)
